# GameOfLife

./: CMakeLists.txt  README.md  main.cpp  pattern_export.txt
